fix CSS dark mode

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -282,7 +282,7 @@ h2 + .header-anchor {
 /* -------------------------- Johnny's custom stuff ------------------------- */
 
 blockquote {
-	border-left: 5px solid yellowgreen;
+	border-left: 5px solid var(--text-color-link-active);
 	margin: 10px 10px 10px 0;
 }
 blockquote > p {
@@ -290,11 +290,10 @@ blockquote > p {
 }
 
 code:not([class*="language-"]) {
-	background-color: rgba(245, 250, 235, 0.056);
-	border: 1px dotted yellowgreen;
-	border-bottom: 2px solid yellowgreen;
+	border: 1px dotted var(--text-color-link-active);
+	border-bottom: 2px solid var(--text-color-link-active);
 	border-radius: 2px;
-	color: rgb(49, 62, 27);
+	color: var(--text-color-link-visited);
 	/* font-family: $monospace; */
 	/* font-size: 1.8rem; */
 	overflow-wrap: anywhere;
@@ -302,10 +301,10 @@ code:not([class*="language-"]) {
 }
 
 h1 {
-	border-bottom: 5px solid yellowgreen;
+	border-bottom: 5px solid var(--text-color-link-active);
 }
 h2 {
-	border-bottom: 3px solid yellowgreen;
+	border-bottom: 3px solid var(--text-color-link-active);
 }
 
 hr {
@@ -313,7 +312,7 @@ hr {
 	margin: 10px;
 }
 hr::before {
-	color: yellowgreen;
+	color: var(--text-color-link-active);
 	content: "≡";
 	display: block;
 	/* font-family: $monospace; */
@@ -324,4 +323,9 @@ hr::before {
 img {
 	height: auto;
 	max-width: 100%;
+}
+
+.postlist-item > p.author {
+	font-size: 0.8125em; /* 13px /16 */
+	font-weight: bold;
 }
